@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.40 [20141006] [svn: r613]
+Changelog for sg3_utils-1.40 [20141007] [svn: r614]
   - sg_write_verify: new utility for WRITE AND VERIFY
   - sg_ses_microcode: new utility
   - sg_senddiag: add --maxlen= option
@@ -22,6 +22,7 @@ Changelog for sg3_utils-1.40 [20141006] [svn: r613]
     - add optional descriptions to -ee output
   - sg_sanitize: add --desc and --zero options
     - output unit serial number and LU name prior to
+  - sg_persist: split help into two pages, '-hh' for 2nd
   - sg_logs: refine tape drive output
   - sg_raw: with -vvv decode T10 CDB name
   - sg_opcodes: add --compact field
